--- a/packages/media/media-image/package.json
+++ b/packages/media/media-image/package.json
@@ -27,6 +27,7 @@
     "@atlaskit/docs": "^6.0.0",
     "@atlaskit/field-text": "^7.0.18",
     "@atlaskit/media-core": "^27.0.0",
-    "@atlaskit/media-test-helpers": "^20.1.0"
+    "@atlaskit/media-test-helpers": "^20.1.0",
+    "enzyme": "^3.7.0"
   }
 }
