--- a/package.json
+++ b/package.json
@@ -288,6 +288,7 @@
     "@types/prosemirror-tables": "^0.1.3",
     "@types/prosemirror-transform": "^1.1.0",
     "@types/prosemirror-view": "^1.3.0",
+    "@types/puppeteer": "^1.12.1",
     "@types/query-string": "^4.3.1",
     "@types/react": "^16.4.18",
     "@types/react-loadable": "^5.4.1",
