--- a/packages/editor/editor-core/package.json
+++ b/packages/editor/editor-core/package.json
@@ -69,6 +69,7 @@
     "@types/prosemirror-tables": "^0.1.3",
     "@types/prosemirror-transform": "^1.1.0",
     "@types/prosemirror-view": "^1.3.0",
+    "@types/puppeteer": "^1.12.1",
     "@types/react-loadable": "^5.4.1",
     "classnames": "^2.2.5",
     "eventemitter2": "^4.1.0",
