--- a/packages/navigation/atlassian-switcher/package.json
+++ b/packages/navigation/atlassian-switcher/package.json
@@ -19,6 +19,7 @@
     "Harsha Ivaturi"
   ],
   "dependencies": {
+    "@atlaskit/analytics-gas-types": "^3.2.4",
     "@atlaskit/analytics-namespaced-context": "^2.2.0",
     "@atlaskit/analytics-next": "^3.2.1",
     "@atlaskit/analytics-next-types": "^3.2.0",
