--- a/packages/core/textfield/package.json
+++ b/packages/core/textfield/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/theme": "^7.0.1",
-    "@babel/runtime": "^7.0.0"
+    "@babel/runtime": "^7.0.0",
+    "emotion": "^9.1.1"
   },
   "peerDependencies": {
     "react": "^16.4.0",
