--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test:update": "                         node ./build/jest-config/index.js -u",
     "test:watch": "                          node ./build/jest-config/index.js --watch",
     "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) node ./build/jest-config/index.js",
-    "test:dependents:direct": "              CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js direct-dependencies) yarn jest",
-    "test:dependents:all": "                 CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js all-dependencies) yarn jest",
+    "test:dependents:direct": "              CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js --dependents='direct') yarn jest",
+    "test:dependents:all": "                 CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js --dependents='all') yarn jest",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
     "test:browser:browserstack": "           projector ./projector testBrowserCI --browserstack",
@@ -39,10 +39,10 @@
     "test:webdriver:watch": "                WATCH=true node ./build/webdriver-runner/index.js",
     "test:webdriver:watch:chrome": "         HEADLESS=false WATCH=true node ./build/webdriver-runner/index.js",
     "test:webdriver:browserstack": "         TEST_ENV=browserstack node ./build/webdriver-runner/index.js",
-    "test:webdriver:browserstack:changed": " CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js direct-dependencies) yarn test:webdriver:browserstack",
+    "test:webdriver:browserstack:changed": " CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) yarn test:webdriver:browserstack",
     "test:vr": "                             node ./build/visual-regression/index.js",
     "test:vr:local:watch": "                 WATCH=true RUN_LOCAL_ONLY=true node ./build/visual-regression/index.js",
-    "test:vr:changed": "                     CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js direct-dependencies) yarn test:vr",
+    "test:vr:changed": "                     CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) yarn test:vr",
     "lint": "                                yarn run lint:eslint && yarn run lint:tslint && yarn run lint:stylelint",
     "lint:stylelint": "                      stylelint '**/*.{js,ts,tsx}'",
     "lint:eslint": "                         eslint --print-config .eslintrc.json | eslint-config-prettier-check && eslint '**/*.js'",
