--- a/packages/core/avatar/package.json
+++ b/packages/core/avatar/package.json
@@ -22,7 +22,8 @@
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/theme": "^7.0.1",
     "@atlaskit/tooltip": "^12.1.15",
-    "@babel/runtime": "^7.0.0"
+    "@babel/runtime": "^7.0.0",
+    "exenv": "^1.2.2"
   },
   "peerDependencies": {
     "react": "^16.4.0",
@@ -38,7 +39,6 @@
     "@atlaskit/toggle": "^5.0.15",
     "@atlaskit/visual-regression": "^0.0.1",
     "enzyme": "^3.7.0",
-    "exenv": "^1.2.2",
     "react-dom": "^16.4.2"
   },
   "keywords": [
