--- a/packages/editor/editor-core/package.json
+++ b/packages/editor/editor-core/package.json
@@ -103,6 +103,7 @@
     "styled-components": "^3.2.6"
   },
   "devDependencies": {
+    "@atlaskit/textarea": "0.2.4",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/dropdown-menu": "^6.1.26",
     "@atlaskit/editor-bitbucket-transformer": "^4.1.13",
@@ -118,6 +119,7 @@
     "@atlaskit/visual-regression": "^0.0.1",
     "@atlaskit/webdriver-runner": "^0.1.1",
     "clipboard-polyfill": "2.4.3",
+    "diff": "^4.0.1",
     "enzyme": "^3.7.0",
     "jest-sandbox": "^1.1.1",
     "jquery": "^3.2.1",
