--- a/packages/editor/editor-core/package.json
+++ b/packages/editor/editor-core/package.json
@@ -126,6 +126,7 @@
     "raf-stub": "^2.0.1",
     "react": "^16.4.0",
     "react-intl": "^2.6.0",
-    "sinon": "^2.2.0"
+    "sinon": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
