--- a/package.json
+++ b/package.json
@@ -278,7 +278,9 @@
     "@types/markdown-it": "^0.0.7",
     "@types/memoize-one": "^3.0.1",
     "@types/meow": "^5.0.0",
+    "@types/mkdirp": "^0.5.2",
     "@types/node-fetch": "^2.1.4",
+    "@types/prettier": "^1.15.2",
     "@types/ora": "^1.3.4",
     "@types/prosemirror-commands": "^1.0.1",
     "@types/prosemirror-history": "^1.0.1",
