--- a/packages/media/media-image/package.json
+++ b/packages/media/media-image/package.json
@@ -32,6 +32,7 @@
     "@atlaskit/media-test-helpers": "^20.1.0",
     "@atlaskit/select": "^7.1.2",
     "@atlaskit/spinner": "^9.0.13",
+    "@atlaskit/theme": "^7.0.5",
     "enzyme": "^3.7.0"
   }
 }
