--- a/packages/elements/date/package.json
+++ b/packages/elements/date/package.json
@@ -35,6 +35,7 @@
     "react": "^16.4.0"
   },
   "devDependencies": {
+    "@atlaskit/elements-test-helpers": "^0.0.0",
     "@atlaskit/docs": "^6.0.0",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
