--- a/packages/media/media-editor/package.json
+++ b/packages/media/media-editor/package.json
@@ -24,6 +24,7 @@
     "@atlaskit/inline-dialog": "^9.0.14",
     "@atlaskit/media-card": "^54.0.0",
     "@atlaskit/media-ui": "^9.0.0",
+    "@atlaskit/modal-dialog": "^7.2.3",
     "@atlaskit/spinner": "^9.0.6",
     "@atlaskit/theme": "^7.0.2",
     "@types/uuid": "^3.4.4",
