--- a/packages/css-packs/css-reset/package.json
+++ b/packages/css-packs/css-reset/package.json
@@ -3,9 +3,12 @@
   "version": "3.0.5",
   "description": "Base stylesheet for ADG",
   "license": "Apache-2.0",
-  "main": "bundle.css",
+  "main": "dist/bundle.css",
   "atlaskit:src": "src/index.js",
   "atlaskit:designLink": "https://atlassian.design/guidelines/product/overview",
+  "files": [
+    "dist"
+  ],
   "author": "Atlassian Pty Ltd",
   "maintainers": [
     "Sean C",
