--- a/packages/media/media-editor/package.json
+++ b/packages/media/media-editor/package.json
@@ -27,6 +27,7 @@
     "@atlaskit/modal-dialog": "^7.2.3",
     "@atlaskit/spinner": "^9.0.6",
     "@atlaskit/theme": "^7.0.2",
+    "@atlaskit/tooltip": "^12.1.17",
     "@types/uuid": "^3.4.4",
     "tslib": "^1.8.0",
     "uuid": "^3.1.0"
