--- a/packages/elements/emoji/package.json
+++ b/packages/elements/emoji/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/editor-test-helpers": "^7.0.2",
+    "@atlaskit/elements-test-helpers": "^0.0.1",
     "@atlaskit/i18n-tools": "^0.4.0",
     "@atlaskit/layer": "^5.0.10",
     "@atlaskit/media-core": "^27.2.0",
