--- a/packages/elements/status/package.json
+++ b/packages/elements/status/package.json
@@ -40,6 +40,7 @@
     "react-intl": "^2.6.0"
   },
   "devDependencies": {
+    "@atlaskit/elements-test-helpers": "^0.0.1",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/editor-test-helpers": "^7.0.0",
     "@atlaskit/i18n-tools": "^0.4.0",
