--- a/packages/elements/task-decision/package.json
+++ b/packages/elements/task-decision/package.json
@@ -51,6 +51,7 @@
     "@atlaskit/avatar": "^14.1.8",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/editor-common": "^33.0.0",
+    "@atlaskit/elements-test-helpers": "^0.1.0",
     "@atlaskit/renderer": "^41.0.0",
     "@atlaskit/util-common-test": "^2.4.2",
     "@atlaskit/util-data-test": "^10.2.2",
