--- a/packages/editor/updater-cli/package.json
+++ b/packages/editor/updater-cli/package.json
@@ -25,6 +25,7 @@
     "ora": "^3.0.0",
     "semver": "^5.4.1",
     "terminal-link": "^1.2.0",
+    "tslib": "^1.8.0",
     "yarn-deduplicate": "^1.0.5"
   },
   "devDependencies": {
