--- a/packages/core/feedback-collector/package.json
+++ b/packages/core/feedback-collector/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@atlaskit/build-utils": "^2.0.1",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/button": "^10.1.2",
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/global-navigation": "^5.5.2",
