--- a/packages/elements/reactions/package.json
+++ b/packages/elements/reactions/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@atlaskit/docs": "^6.0.1",
     "@atlaskit/editor-test-helpers": "^7.0.2",
+    "@atlaskit/elements-test-helpers": "^0.2.0",
     "@atlaskit/i18n-tools": "^0.4.0",
     "@atlaskit/tooltip": "^12.1.15",
     "@atlaskit/util-common-test": "^2.4.2",
