--- a/packages/core/drawer/package.json
+++ b/packages/core/drawer/package.json
@@ -9,9 +9,10 @@
     "Ajay M"
   ],
   "license": "Apache-2.0",
+  "module": "index.js",
   "atlaskit:src": "src/index.js",
   "sideEffects": false,
-"dependencies": {
+  "dependencies": {
     "@atlaskit/analytics-next": "^3.1.2",
     "@atlaskit/blanket": "^7.0.12",
     "@atlaskit/docs": "^6.0.1",
