--- a/packages/editor/adf-schema/package.json
+++ b/packages/editor/adf-schema/package.json
@@ -4,6 +4,7 @@
   "description": "Shared package that contains the ADF-schema (json) and ProseMirror node/mark specs",
   "license": "Apache-2.0",
   "atlaskit:src": "src/index.ts",
+  "main": "dist/es5/index.js",
   "module": "index.js",
   "types": "index.d.ts",
   "sideEffects": false,
