--- a/packages/editor/adf-utils/package.json
+++ b/packages/editor/adf-utils/package.json
@@ -4,6 +4,7 @@
   "description": "Set of utilities to traverse, modify and create ADF documents.",
   "license": "Apache-2.0",
   "atlaskit:src": "src/index.ts",
+  "main": "dist/es5/index.js",
   "module": "index.js",
   "types": "index.d.ts",
   "sideEffects": false,
