--- a/packages/editor/renderer/tsconfig.json
+++ b/packages/editor/renderer/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "resolveJsonModule": true
   },
   "include": [
     "./src/**/*.ts",
