--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "enable:lfs": "                          node enable-lfs-hooks.js",
     "test": "                                yarn jest",
     "test:CI": "                             node ./build/jest-config/run.jest.with.analytics.reports.js",
-    "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) node ./build/jest-config/run.jest.with.analytics.reports.js",
+    "test:changed": "                        CHANGED_PACKAGES=$(node build/ci-scripts/get.changed.packages.since.master.js) COVERAGE_PACKAGES=$(node build/ci-scripts/get.code.threshold.for.changed.packages.since.master.js) yarn test:CI",
     "test:browser": "                        projector ./projector testBrowser",
     "test:browser:watch": "                  projector ./projector testBrowser --watch",
     "test:browser:browserstack": "           projector ./projector testBrowserCI --browserstack",
