--- a/packages/core/logo/package.json
+++ b/packages/core/logo/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "prop-types": "^15.5.10",
+    "react-uid": "^2.2.0",
     "uuid": "^3.1.0"
   },
   "peerDependencies": {
