--- a/package.json
+++ b/package.json
@@ -276,14 +276,16 @@
     "@types/js-search": "^1.4.0",
     "@types/linkify-it": "^2.0.4",
     "@types/lodash.debounce": "^4.0.4",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.sample": "^4.2.4",
+    "@types/lodash.throttle": "^4.1.6",
     "@types/markdown-it": "^0.0.7",
     "@types/memoize-one": "^3.0.1",
     "@types/meow": "^5.0.0",
     "@types/mkdirp": "^0.5.2",
     "@types/node-fetch": "^2.1.4",
-    "@types/prettier": "^1.15.2",
     "@types/ora": "^1.3.4",
+    "@types/prettier": "^1.15.2",
     "@types/prosemirror-commands": "^1.0.1",
     "@types/prosemirror-history": "^1.0.1",
     "@types/prosemirror-inputrules": "^1.0.2",
