--- a/packages/navigation/atlassian-switcher/package.json
+++ b/packages/navigation/atlassian-switcher/package.json
@@ -34,6 +34,9 @@
     "@atlaskit/lozenge": "^7.0.0",
     "@atlaskit/theme": "^8.0.0",
     "@atlaskit/type-helpers": "^2.1.0",
+    "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.throttle": "^4.1.6",
+    "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "tslib": "^1.8.0"
   },
