--- a/packages/elements/mention/package.json
+++ b/packages/elements/mention/package.json
@@ -33,7 +33,9 @@
     "@atlaskit/build-utils": "^2.0.0",
     "@atlaskit/docs": "^7.0.0",
     "@atlaskit/editor-test-helpers": "^7.0.0",
+    "@atlaskit/elements-test-helpers": "^0.2.0",
     "@atlaskit/i18n-tools": "^0.4.0",
+    "@atlaskit/ssr": "^0.0.1",
     "@atlaskit/util-common-test": "^2.4.2",
     "@atlaskit/util-data-test": "^10.2.3",
     "@types/fetch-mock": "^6.0.3",
