--- a/packages/editor/adf-schema/package.json
+++ b/packages/editor/adf-schema/package.json
@@ -5,8 +5,8 @@
   "license": "Apache-2.0",
   "atlaskit:src": "src/index.ts",
   "main": "dist/es5/index.js",
-  "module": "index.js",
-  "types": "index.d.ts",
+  "module": "dist/es2015/index.js",
+  "types": "dist/es5/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "build:json-schema": "mkdir -p dist && cp -r json-schema dist",
