--- a/packages/editor/adf-utils/package.json
+++ b/packages/editor/adf-utils/package.json
@@ -5,8 +5,8 @@
   "license": "Apache-2.0",
   "atlaskit:src": "src/index.ts",
   "main": "dist/es5/index.js",
-  "module": "index.js",
-  "types": "index.d.ts",
+  "module": "dist/es2015/index.js",
+  "types": "dist/es5/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "generate:spec": "rm -rf ./src/validator/specs/ && ../json-schema-generator/bin.js --outDir=./src/validator/specs/ --mode=Spec --stage=0 ./src/validator/entry.ts"
